--- a/views/index.jade
+++ b/views/index.jade
@@ -8,4 +8,4 @@ html
     ul
       each site in sites
         li
-          a(href="/#{site}/")= site
+          a(href="/ui-review/#{site}/")= site
